--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -44,7 +44,7 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-sbin_PROGRAMS = test01$(EXEEXT)
+sbin_PROGRAMS = test01$(EXEEXT) test02$(EXEEXT)
 subdir = test
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -57,9 +57,13 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(sbindir)"
 sbinPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(sbin_PROGRAMS)
-am_test01_OBJECTS = test01-test01.$(OBJEXT) test01-readPLC.$(OBJEXT)
+am_test01_OBJECTS = test01-test01.$(OBJEXT) \
+	test01-connectPLC.$(OBJEXT)
 test01_OBJECTS = $(am_test01_OBJECTS)
 test01_LDADD = $(LDADD)
+am_test02_OBJECTS = test02-test02.$(OBJEXT) test02-statePLC.$(OBJEXT)
+test02_OBJECTS = $(am_test02_OBJECTS)
+test02_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
@@ -67,8 +71,8 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(test01_SOURCES)
-DIST_SOURCES = $(test01_SOURCES)
+SOURCES = $(test01_SOURCES) $(test02_SOURCES)
+DIST_SOURCES = $(test01_SOURCES) $(test02_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -141,8 +145,10 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-test01_SOURCES = test01.c $(top_srcdir)/src/readPLC.c
+test01_SOURCES = test01.c $(top_srcdir)/src/connectPLC.c
 test01_CPPFLAGS = -I$(top_srcdir)/include -DLINUX
+test02_SOURCES = test02.c $(top_srcdir)/src/statePLC.c
+test02_CPPFLAGS = -I$(top_srcdir)/include -DLINUX
 all: all-am
 
 .SUFFIXES:
@@ -202,6 +208,9 @@ clean-sbinPROGRAMS:
 test01$(EXEEXT): $(test01_OBJECTS) $(test01_DEPENDENCIES) 
 	@rm -f test01$(EXEEXT)
 	$(LINK) $(test01_LDFLAGS) $(test01_OBJECTS) $(test01_LDADD) $(LIBS)
+test02$(EXEEXT): $(test02_OBJECTS) $(test02_DEPENDENCIES) 
+	@rm -f test02$(EXEEXT)
+	$(LINK) $(test02_LDFLAGS) $(test02_OBJECTS) $(test02_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -209,8 +218,10 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test01-readPLC.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test01-connectPLC.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test01-test01.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test02-statePLC.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test02-test02.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -240,19 +251,47 @@ test01-test01.obj: test01.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test01-test01.obj `if test -f 'test01.c'; then $(CYGPATH_W) 'test01.c'; else $(CYGPATH_W) '$(srcdir)/test01.c'; fi`
 
-test01-readPLC.o: $(top_srcdir)/src/readPLC.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test01-readPLC.o -MD -MP -MF "$(DEPDIR)/test01-readPLC.Tpo" -c -o test01-readPLC.o `test -f '$(top_srcdir)/src/readPLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/readPLC.c; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test01-readPLC.Tpo" "$(DEPDIR)/test01-readPLC.Po"; else rm -f "$(DEPDIR)/test01-readPLC.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/readPLC.c' object='test01-readPLC.o' libtool=no @AMDEPBACKSLASH@
+test01-connectPLC.o: $(top_srcdir)/src/connectPLC.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test01-connectPLC.o -MD -MP -MF "$(DEPDIR)/test01-connectPLC.Tpo" -c -o test01-connectPLC.o `test -f '$(top_srcdir)/src/connectPLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/connectPLC.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test01-connectPLC.Tpo" "$(DEPDIR)/test01-connectPLC.Po"; else rm -f "$(DEPDIR)/test01-connectPLC.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/connectPLC.c' object='test01-connectPLC.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test01-readPLC.o `test -f '$(top_srcdir)/src/readPLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/readPLC.c
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test01-connectPLC.o `test -f '$(top_srcdir)/src/connectPLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/connectPLC.c
 
-test01-readPLC.obj: $(top_srcdir)/src/readPLC.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test01-readPLC.obj -MD -MP -MF "$(DEPDIR)/test01-readPLC.Tpo" -c -o test01-readPLC.obj `if test -f '$(top_srcdir)/src/readPLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/readPLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/readPLC.c'; fi`; \
-@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test01-readPLC.Tpo" "$(DEPDIR)/test01-readPLC.Po"; else rm -f "$(DEPDIR)/test01-readPLC.Tpo"; exit 1; fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/readPLC.c' object='test01-readPLC.obj' libtool=no @AMDEPBACKSLASH@
+test01-connectPLC.obj: $(top_srcdir)/src/connectPLC.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test01-connectPLC.obj -MD -MP -MF "$(DEPDIR)/test01-connectPLC.Tpo" -c -o test01-connectPLC.obj `if test -f '$(top_srcdir)/src/connectPLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/connectPLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/connectPLC.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test01-connectPLC.Tpo" "$(DEPDIR)/test01-connectPLC.Po"; else rm -f "$(DEPDIR)/test01-connectPLC.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/connectPLC.c' object='test01-connectPLC.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test01-readPLC.obj `if test -f '$(top_srcdir)/src/readPLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/readPLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/readPLC.c'; fi`
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test01_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test01-connectPLC.obj `if test -f '$(top_srcdir)/src/connectPLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/connectPLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/connectPLC.c'; fi`
+
+test02-test02.o: test02.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test02-test02.o -MD -MP -MF "$(DEPDIR)/test02-test02.Tpo" -c -o test02-test02.o `test -f 'test02.c' || echo '$(srcdir)/'`test02.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test02-test02.Tpo" "$(DEPDIR)/test02-test02.Po"; else rm -f "$(DEPDIR)/test02-test02.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='test02.c' object='test02-test02.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test02-test02.o `test -f 'test02.c' || echo '$(srcdir)/'`test02.c
+
+test02-test02.obj: test02.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test02-test02.obj -MD -MP -MF "$(DEPDIR)/test02-test02.Tpo" -c -o test02-test02.obj `if test -f 'test02.c'; then $(CYGPATH_W) 'test02.c'; else $(CYGPATH_W) '$(srcdir)/test02.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test02-test02.Tpo" "$(DEPDIR)/test02-test02.Po"; else rm -f "$(DEPDIR)/test02-test02.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='test02.c' object='test02-test02.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test02-test02.obj `if test -f 'test02.c'; then $(CYGPATH_W) 'test02.c'; else $(CYGPATH_W) '$(srcdir)/test02.c'; fi`
+
+test02-statePLC.o: $(top_srcdir)/src/statePLC.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test02-statePLC.o -MD -MP -MF "$(DEPDIR)/test02-statePLC.Tpo" -c -o test02-statePLC.o `test -f '$(top_srcdir)/src/statePLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/statePLC.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test02-statePLC.Tpo" "$(DEPDIR)/test02-statePLC.Po"; else rm -f "$(DEPDIR)/test02-statePLC.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/statePLC.c' object='test02-statePLC.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test02-statePLC.o `test -f '$(top_srcdir)/src/statePLC.c' || echo '$(srcdir)/'`$(top_srcdir)/src/statePLC.c
+
+test02-statePLC.obj: $(top_srcdir)/src/statePLC.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT test02-statePLC.obj -MD -MP -MF "$(DEPDIR)/test02-statePLC.Tpo" -c -o test02-statePLC.obj `if test -f '$(top_srcdir)/src/statePLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/statePLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/statePLC.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/test02-statePLC.Tpo" "$(DEPDIR)/test02-statePLC.Po"; else rm -f "$(DEPDIR)/test02-statePLC.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(top_srcdir)/src/statePLC.c' object='test02-statePLC.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test02_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o test02-statePLC.obj `if test -f '$(top_srcdir)/src/statePLC.c'; then $(CYGPATH_W) '$(top_srcdir)/src/statePLC.c'; else $(CYGPATH_W) '$(srcdir)/$(top_srcdir)/src/statePLC.c'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
