--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,6 +8,8 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-sbin_PROGRAMS = test01
-test01_SOURCES = test01.c $(top_srcdir)/src/readPLC.c
+sbin_PROGRAMS = test01 test02
+test01_SOURCES = test01.c $(top_srcdir)/src/connectPLC.c
 test01_CPPFLAGS = -I$(top_srcdir)/include -DLINUX
+test02_SOURCES = test02.c $(top_srcdir)/src/statePLC.c
+test02_CPPFLAGS = -I$(top_srcdir)/include -DLINUX
