--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,11 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* PLC's data area */
+#undef DAREA
+
+/* PLC's data area length */
+#undef DBLEN
+
 /* "Debug enabled" */
 #undef DEBUG
 
@@ -8,6 +14,12 @@
 
 /* PLC's base ip address */
 #undef IP_BASE_ADDR
+
+/* Max sampling interval for media calculation */
+#undef MAX
+
+/* Min sampling interval for media calculation */
+#undef MIN
 
 /* MPI's address */
 #undef MPI_ADDR
@@ -39,11 +51,8 @@
 /* Daemon's user */
 #undef RUN_AS_USER
 
-/* CPU's alot */
+/* CPU's slot */
 #undef SLOT
-
-/* Connection's timeout */
-#undef TIMEOUT
 
 /* Version number of package */
 #undef VERSION
